# YouTuobe_notifier

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  gen_tls.sh  gen_tsl.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_09_1808-74db4139f8ef_init.py  9efc860036a8_init.py
bot/: alembic.ini  main.py  settings.py
bot/controllers/: __init__.py  channels.py  messages.py
bot/environment/: dev.env.template  prod.env.template
bot/filters/: admin_filter.py
bot/handlers/: __init__.py  admin.py  basic.py  channels.py
bot/keyboards/inline/: __init__.py  channel_callbacks.py  channel_keyboards.py
bot/logging_data/: formatters.py
bot/migrations/: env.py
bot/migrations/versions/: eb0894db24b0_initial.py
bot/models/: managers.py  mixins.py  models.py  schemas.py
bot/utils/: common.py  finder.py  lifespan.py  notifier.py
bot/utils/http/: http_headers.py  http_manager.py
db/: yt_notif.db
grafana/: Dockerfile
grafana/config/: grafana.ini
grafana/dashboards/: yt_notif_dashboard.js
loki/: Dockerfile
nginx/: Dockerfile  nginx.conf.template
nginx/config/: nginx.conf.template
postgres/: Dockerfile  init.sql.template
postgres/backup_scripts/: do_backup.sh.template  load_backup.sh.template
postgres/config/: pg_hba.conf  postgresql.conf
src/: main.py
src/apps/notifier/: main.py  models.py  schemas.py  utils.py
src/controllers/: message_ctrl.py
src/core/: lifespan.py  models.py  settings.py  utils.py
src/database/: base.py  helper.py  mixins.py  models.py  orm.py  schemas.py  tps.py  triggers.py  utils.py
src/env/: .env.template
src/filters/: __init__.py  admin_filter.py
src/keyboards/: __init__.py
src/keyboards/inline/: channel_callbacks.py  channel_keyboards.py
src/log/: config.py  formatters.py  settings.py
src/routers/: __init__.py
src/routers/admin/: router.py  utils.py
src/routers/channels/: __init__.py  router.py  utils.py
src/routers/info/: __init__.py  router.py  utils.py
src/routers/start/: __init__.py  router.py  utils.py
src/utils/: common.py  finder.py  scrapper.py  token_bucket.py
src/utils/http/: http_headers.py  http_manager.py
youtube_notifier_bot/: .flake8  Dockerfile  init.sh  pyproject.toml
youtube_notifier_bot/bot/: alembic.ini  bot.py  loader.py  settings.py
youtube_notifier_bot/bot/alembic/: env.py
youtube_notifier_bot/bot/alembic/versions/: d9a5180c30e7_initial.py
youtube_notifier_bot/bot/config/: env_settings.py  msg_data.py
youtube_notifier_bot/bot/db/: connect.py  core.py  mixins.py  schemas.py
youtube_notifier_bot/bot/environment/: dev.env.template  prod.env.template
youtube_notifier_bot/bot/filters/: admin_filter.py
youtube_notifier_bot/bot/handlers/: __init__.py
youtube_notifier_bot/bot/handlers/admin/: __init__.py  admin_h.py
youtube_notifier_bot/bot/handlers/base_handers/: __init__.py  channels_h.py  info_h.py  start_h.py
youtube_notifier_bot/bot/handlers/channels/: __init__.py  channel_add.py  channel_sub.py
youtube_notifier_bot/bot/keyboards/: __init__.py
youtube_notifier_bot/bot/keyboards/inline/: channel_keyboards.py
youtube_notifier_bot/bot/logging_data/: formatters.py
youtube_notifier_bot/bot/utils/: channel_manager.py  decorators.py  event_manager.py  message_manager.py  searcher.py  sender.py
youtube_notifier_bot/bot/utils/http_manager/: __init__.py  http_headers.py  http_manager.py
youtube_notifier_bot/bot/youtube/: scrapper.py
